Don't allow sudden termination while writing to local storage. https://bugs.webkit.org/show_bug.cgi?id=134254. <rdar://problem/15093854>.

Reviewed by Darin Adler.

* UIProcess/Storage/LocalStorageDatabase.cpp:
(WebKit::LocalStorageDatabase::scheduleDatabaseUpdate):
Disable sudden termination when a database update is scheduled.
(WebKit::LocalStorageDatabase::updateDatabase):
Re-enable sudden termination when the update completes.
* UIProcess/Storage/LocalStorageDatabase.h:


Canonical link: https://commits.webkit.org/152320@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170471 268f45cc-cd09-0410-ab3c-d52691b4dbfc